@@ -3,6 +3,7 @@
     * Add warning if a text seem to be already crypted or signed.
     * BEGIN PGP SIGNATURE supported
     * On Unix system, try to use /usr/local/bin/gpg (for MacOs users)
+    * Added option to hide expired keys
 
 2007-10-29  Maximilien Cuony
 	* 0.4.4 packed, and uploaded to the server !
